# bad_http

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/bad_http/: bad_http.py
src/bad_http/serve/: firewall.py  handler.py  http_server.py  pretty_colors.py
