[project]
name = "bad-http"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
	{ name = "amroot"}
]

[project.scripts]
bad_http = "bad_http.bad_http:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
